--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /workspace.xml
 /py.txtS
 /resumo.txt
-AlgoritmosComPython-
-git_comandos_basicos.md
-Logica
-.idea
+/AlgoritmosComPython-
+/git_comandos_basicos.md
+/Logica
+/.idea
